--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "axios": "^0.19.0",
     "discord.js": "^11.5.1",
     "dotenv": "^8.0.0",
+    "fs-extra": "^8.0.1",
+    "lodash": "^4.17.11",
     "tldr": "^3.2.7"
   }
 }
